--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -2,17 +2,18 @@ version: '3.4'
 
 services:
   backend:
-    image: app-backend:1.00
+    image: app-backend-debug:1.00
     build: ./backend
-    container_name: fastapi-backend
+    container_name: fastapi-backend-debug
     environment:
       - DATABASE_URL=postgres://hello_fastapi:hello_fastapi@db:5432/hello_fastapi_dev
       - SECRET_KEY=09d25e094faa6ca2556c818166b7a9563b93f7099f6f0f4caa6cf63b88e8d3e7
     volumes:
       - ./backend:/app
-    command: uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
+    command: sh -c "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 -m uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"
     ports:
       - 8000:8000
+      - 5678:5678
     depends_on:
       - db
 
