--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,7 +20,8 @@ RUN python -m pip install -r requirements.txt
 COPY src /app
 COPY migrations .
 COPY pyproject.toml .
-
+# dist HTML from frontend
+# RUN mkdir dist
 # Creates a non-root user with an explicit UID and adds permission to access the /app folder
 # For more info, please refer to https://aka.ms/vscode-docker-python-configure-containers
 # RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
