--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -7,9 +7,10 @@ services:
     container_name: fastapi-backend-debug
     environment:
       - DATABASE_URL=postgres://hello_fastapi:hello_fastapi@db:5432/hello_fastapi_dev
-      - SECRET_KEY=09d25e094faa6ca2556c818166b7a9563b93f7099f6f0f4caa6cf63b88e8d3e7
+      - SECRET_KEY=changethis
     volumes:
       - ./backend:/app
+      - ./frontend/dist:/app/dist
     command: sh -c "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 -m uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"
     ports:
       - 8000:8000
@@ -38,6 +39,8 @@ services:
       - POSTGRES_DB=hello_fastapi_dev
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    ports:
+      - 54320:5432
 
 volumes:
   postgres_data:  
