--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - SECRET_KEY=changethis
     volumes:
       - ./backend:/app
-      - ../frontend/dist:/app/dist
+      - ./frontend/dist:/app/dist
     # command: uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
-    command: gunicorn --bind 127.0.0.1:8000 -k uvicorn.workers.UvicornWorker src.main:app
+    command: gunicorn --bind 0.0.0.0:8000 -k uvicorn.workers.UvicornWorker src.main:app
     ports:
       - 8000:8000
     depends_on:
