mount index.html to https://site/fastapi

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
                     "remoteRoot": "/app"
                 }
             ],
-            "justMyCode": true
+            "justMyCode": false
         },
         {
             "name": "Docker: Python - Fastapi",
