--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,22 +13,15 @@ services:
       - ./frontend/dist:/app/dist
     # command: uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
     command: gunicorn --bind 0.0.0.0:8000 -k uvicorn.workers.UvicornWorker src.main:app
+    # only allow local, forbid other outside access through port 8000
     ports:
-      - 8000:8000
+      - 127.0.0.1:8000:8000
     depends_on:
       - db
 
 # no need frontend in Prod. server
   # frontend:
   #   image: app-frontend:1.00
-  #   build: ./frontend
-  #   container_name: vue-frontend
-  #   restart: always
-  #   volumes:
-  #     - ./frontend:/app
-  #     - /app/node_modules
-  #   ports:
-  #     - 8080:8080  # 8200:8080 publish port 8080 (inside container) as 8200 on host
 
   db:
     image: postgres:15.1
