--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     build: ./backend
     container_name: fastapi-backend
     environment:
-      - DATABASE_URL=postgres://hello_fastapi:hello_fastapi@db:5432/hello_fastapi_dev
-      - SECRET_KEY=changethis
+      - DATABASE_URL=${DATABASE_URL:-postgres://hello_fastapi:hello_fastapi@db:5432/hello_fastapi_dev}
+      - SECRET_KEY=
     volumes:
       - ./backend:/app
       - ./frontend/dist:/app/dist
@@ -29,8 +29,8 @@ services:
       - 5432
     environment:
       - POSTGRES_USER=hello_fastapi
-      - POSTGRES_PASSWORD=hello_fastapi
-      - POSTGRES_DB=hello_fastapi_dev
+      - POSTGRES_PASSWORD=
+      - POSTGRES_DB=hello_fastapi
     volumes:
       - postgres_data:/var/lib/postgresql/data/
 
