--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: ./backend
     container_name: fastapi-backend
     environment:
-      - DATABASE_URL=${DATABASE_URL:-postgres://hello_fastapi:hello_fastapi@db:5432/hello_fastapi_dev}
+      - DATABASE_URL=${DATABASE_URL:-postgres://hello_fastapi:hello_fastapi@db:5432/hello_fastapi}
       - SECRET_KEY
     volumes:
       - ./backend:/app
@@ -25,14 +25,14 @@ services:
 
   db:
     image: postgres:15.1
-    expose:
-      - 5432
     environment:
       - POSTGRES_USER=hello_fastapi
       - POSTGRES_PASSWORD
       - POSTGRES_DB=hello_fastapi
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    ports:
+      - 127.0.0.1:5432:5432
 
 volumes:
   postgres_data:  
