--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,4 @@
 NODE_ENV = 'production'
 # 接口地址，注意协议，如果你没有配置 ssl，需要将 https 改为 http
-VUE_APP_BASE_API  = '/fastapi'
+# VUE_APP_BASE_API  = '/fastapi' # to mount app in sub-dir, like: https://xxx/fastapi
+VUE_APP_BASE_API  = '/'
