--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL:-postgres://hello_fastapi:hello_fastapi@db:5432/hello_fastapi}
       - SECRET_KEY
+      - FASTAPI_MOUNT_DIR
     volumes:
       - ./backend:/app
       - ./frontend/dist:/app/dist
